2003-07-30  Lluis Sanchez Gual <lluis@ximian.com>

	* CSharpCodeGenerator.cs: GenerateTypeStart(): Write type custom attributes

2003-07-06  Andreas Nahr <ClassDevelopment@A-SoftTech.com>

	* CSharpCodeCompiler.cs: Few fixes for update in CodeDom.Compiler

2003-07-04  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* CSharpCodeCompiler.cs: ignore debug statistics in mcs output when
	debug is turned on.

2003-07-02  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* CSharpCodeCompiler.cs: patch from pelle.johnsen@mail.dk (Pelle
	Johnsen) that fixes bug #45708.

2003-05-17  Ben Maurer <bmaurer@users.sourceforge.net>

	* CSharpCodeGenerator.cs: implemented GenerateLinePragma{Start, End}. 
	Marked GenerateEvent as MonoTODO.

2003-04-30  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* CSharpCodeCompiler.cs: add quotes around out assembly name.

2003-04-29  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* CSharpCodeCompiler.cs:
	(CompileAssemblyFromDomBatch): add the assemblies referenced by the
	CodeCompileUnits to the options.

2003-04-29  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* CSharpCodeCompiler.cs: set NativeCompilerReturnValue.

2003-04-25  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* CSharpCodeGenerator.cs:
	(QuoteSnippetString): add a few common escape sequences.

2003-04-24  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* CSharpCodeGenerator.cs: implemented GenerateSnippetMember and some
	little fixes.

2003-04-23  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* CSharpCodeGenerator.cs: beautified conditional statements. Implemented
	GenerateConstructor and GenerateTypeConstructor.

2003-01-10  Duncan Mak  <duncan@ximian.com>

	* CSharpCodeCompiler.cs: 
	* CSharpCodeProvider.cs: Patch from Sean Kasun
	<skasun@azstarnet.com> to implement CSharpCodeCompiler.

2002-12-07 Jackson Harper <jackson@latitudegeo.com>

	* CompilerError.cs Compiler.cs: Moving these classes to their own assembly

2002-11-11 Jackson Harper <jackson@latitudegeo.com>
